Update tests to be run against JDK11